# linker.js

./: .clang-format  .eslintrc.js  .gitignore  .npmignore  .prettierignore  CHANGE.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
libs/linker.c/: README.md  binding.gyp  package.json
libs/linker.c/scripts/: build_test.sh  clean.sh  postinstall.sh  preinstall.sh
libs/linker.c/src/: index.d.ts  index.js  linker.c  linker.h
libs/linker.c/test/: index.js
libs/linker.c/test/sample_libs/c/: lib.c
libs/linker.c/test/sample_libs/rust/: Cargo.toml
scripts/: build.sh  build_test.sh  clean.sh  install.sh
src/: index.d.ts  index.js  linker_js.h
src/c_linker/: CMakeLists.txt  linker.c  linker.h
src/py_linker/: CMakeLists.txt  linker.c  linker.h
test/c_linker/: index.js
test/c_linker/sample_libs/c/: lib.c
test/c_linker/sample_libs/cpp/: lib.cpp
test/c_linker/sample_libs/go/: lib.go
test/c_linker/sample_libs/rust/src/: lib.rs
test/py_linker/: index.js  lib.py  requirments.txt
